Document how iTerm stores profile settings

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -14,6 +14,7 @@ dotfiles_files:
    - {src: bin/open_md, dst: ~/bin/open_md}
    - {src: functions.sh, dst: ~/functions.sh}
    - {src: global_requirements.txt, dst: ~/global_requirements.txt}
+   # iTerm2 doesn't modify settings - it overrides them (symlink will be overriden by a  new file)
    - {src: iterm2/com.googlecode.iterm2.plist, dst: ~/Library/Preferences/com.googlecode.iterm2.plist}
 
 # variables for the role: geerlingguy.homebrew
