Install Source Code Pro fonts

--- a/main.yml
+++ b/main.yml
@@ -62,6 +62,7 @@
 
      - name: Install Leiningen
        get_url: url=https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein dest=~/bin/lein mode=755
+
      # --------------------- GO tools
      - name: Install gocode
        command: go get -u -v github.com/nsf/gocode
@@ -71,3 +72,6 @@
 
      - name: Install go-oracle
        command: go get -u -v golang.org/x/tools/cmd/oracle
+
+     # --------------------- Fonts
+     - include: install_fonts.yml
