--- a/vars/main.yml
+++ b/vars/main.yml
@@ -51,6 +51,8 @@ homebrew_installed_packages:
    - ngrok
    - npm
    - ocaml
+   # OCaml package manager
+   - opam
    - openssl
    - readline
    - reattach-to-user-namespace
