Install Calibre (book management app)

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -74,6 +74,7 @@ homebrew_taps:
 homebrew_cask_apps:
    - appcleaner
    - bartender
+   - Caskroom/cask/calibre
    - clipmenu
    - daisydisk
    - dash
