Install Ukrainian dictionary required for spelling

--- a/main.yml
+++ b/main.yml
@@ -64,3 +64,4 @@
      - include: tasks/devpi.yml
      - include: tasks/go.yml
      - include: tasks/install_fonts.yml
+     - include: tasks/install_ua_spellchecker.yml
