--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -9,9 +9,6 @@
 - name: Install Python 3.5
   command: ~/.pyenv/bin/pyenv install 3.5.0 creates=~/.pyenv/versions/3.5.0/bin/python
 
-- name: Install Python 3.4.3
-  command: ~/.pyenv/bin/pyenv install 3.4.3 creates=~/.pyenv/versions/3.4.3/bin/python
-
 - name: Install Python 2.7.10
   command: ~/.pyenv/bin/pyenv install 2.7.10 creates=~/.pyenv/versions/2.7.10/bin/python
 
@@ -20,8 +17,13 @@
   file: path=~/.pyenv/versions/{{ item.name }}/lib/python{{ item.shortname }}/site-packages/README state=absent
   with_items:
      - {name: 2.7.10, shortname: 2.7}
-     - {name: 3.4.3,  shortname: 3.4}
      - {name: 3.5.0,  shortname: 3.5}
+
+- name: Run pipstrap
+  shell: ~/.pyenv/versions/{{item}}/bin/python {{ dotfiles_repo_local_destination }}/pipstrap/pipstrap.py
+  with_items:
+    - 2.7.10
+    - 3.5.0
 
 - name: Install global requirements for 2.7.10
   shell: ~/.pyenv/versions/2.7.10/bin/pip --isolated install -U -r ~/global_requirements.txt
